# Instrumental-Data-Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
instrumental_data_analyzer/: __init__.py
instrumental_data_analyzer/abstract/: __init__.py  display.py  matrix.py  matrix_collection.py  signal.py  signal_1d.py  signal_1d_collection.py  signal_collection.py
instrumental_data_analyzer/concrete/: chromatography.py  impedance_spectroscopy.py  kinetics.py  multi_well_plates.py  spectroscopy.py  voltammetry.py
instrumental_data_analyzer/instruments/Agilent/: chemstation_processor.py
instrumental_data_analyzer/instruments/CHI/: chi660e.py
instrumental_data_analyzer/instruments/Cytiva/: unicorn5.py  unicorn7.py
instrumental_data_analyzer/instruments/GE_Heathcare/: unicorn5.py  unicorn7.py
instrumental_data_analyzer/instruments/MolecularDevices/: softmax_pro.py
instrumental_data_analyzer/instruments/ThermoFisher/: multiscan_fc.py  nanodrop2000.py
